edit text, make mobile friendly

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <a href="https://github.com/nurobotics/nurc-lax-robot" target="_blank" class="links">here</a>.</p>
             </li>
             <li><b>Tetris</b>
-                <p>I have a deep love of Tetris. In an effort to gain some experience with starting a project from scratch,
+                <p>I have a deep love of Tetris. In an effort to practice starting a project from scratch,
                 I decided to build a working local version of my favorite game. I used the 
                 <a href="http://pygame.org/hifi.html" target="_blank" class="links">pygame</a> package in Python,
                 which proved to be very conenient for managing and drawing sprites. </p>
