Update about me

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         
         <p>In my spare time, I play <a href="https://www.youtube.com/watch?v=XUOKB558wQo" target="_blank" class="links">ultimate frisbee</a>, 
         enjoy the <a href="https://www.facebook.com/photo.php?fbid=10204388312620021&l=9b30e63cd3" target="_blank" class="links">great outdoors</a>, 
-        and play an unhealthy amount of <a href="https://twitter.com/m_niemer/status/752650390500478976" target="_blank" class="links">Tetris</a>.</p>
+        and play an unhealthy amount of <a href="https://www.youtube.com/watch?v=f14qok9XosY" target="_blank" class="links">Tetris</a>.</p>
         
     </div>
 
