changed font, background gradient

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Matthew Niemer is a Computer Science BS student at Northwestern University.">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Droid+Sans" rel="stylesheet">
 </head>
 
 <body>
@@ -40,7 +41,7 @@
                 a lightning fast vision system which will be integrated with a motor controller.
             </li>
             <li><b><a href="https://mattniemer.me/TonEd/Website" target="_blank" class="links">TonEd</a></b>
-                <p>I worked with a partner to create a tool which can be used to identify different kinds of violin tone and diagnose the underlying cause of poor tone quality.
+                <p>I worked with a partner to create a tool which can be used to identify different kinds of violin tone and diagnose the underlying cause of a student's poor tone quality.
                 The solution employs a nearest neighbor classifier trained on a set of audio features extracted from a collection of violin tone samples.</p>
             </li>
             <li><b><a href="https://github.com/mniemer/Unhinged" target="_blank" class="links">Unhinged</a></b>
