--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <p>I'm Matt, a senior studying computer science at <a href="http://eecs.northwestern.edu" target="_blank" class="links">Northwestern University</a>. 
         I enjoy collaborating with others on complex, full-stack problems.</p>
         
-        <p>I've previously worked at <a href="https:/aws.amazon.com/ec2" target="_blank" class="links">Amazon</a> and 
+        <p>I've previously worked at <a href="https://aws.amazon.com/ec2" target="_blank" class="links">Amazon</a> and 
         <a href="http://hagerty.com" target="_blank" class="links">Hagerty Insurance Agency</a>,
         plus I'm currently involved in a couple of great projects on campus.
         Here is my <a href="mattniemer_resume.pdf" target="_blank" class="links">resume</a> - you can reach me anytime at 
