--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
     </script>
     
     <p><a href="https://github.com/mniemer/mniemer.github.io" target="_blank" id="footer">Source Code (github)</a></p>
+    <p><a href="https://mniemer.blogspot.com" target="_blank" id="footer">Blog</a></p>
 </body>
 
 
